--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ body {
 
 .header-wrapper > .nav-wrapper > .links-wrapper > .label {
     font-size: .9em;
-    color: rgb(235, 224, 116);
+    color: rgb(255, 235, 56);
     text-transform: uppercase;
 }
 
@@ -55,11 +55,18 @@ body {
     align-items: center;
 }
 
+.header-wrapper > .nav-wrapper > .links-wrapper > .links a:hover {
+    border-bottom: 1px solid white;
+
+}
+
+    
 .header-wrapper > .nav-wrapper > .links-wrapper > .links a {
     text-decoration: none;
     color: #ffffff;
     font-weight: 600;
-    transition: 0.5s;
+    font-size: 18px;
+    
 }
 
 .header-wrapper > .nav-wrapper > .spark-wrapper {
@@ -69,10 +76,12 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
+    font-size: 18px;
 }
 
 .header-wrapper > .nav-wrapper > .spark-wrapper > .spark-arrow i {
     font-size: 0.8em;
+    margin-left: 5px;
 }
 
 .header-wrapper > .buttons-wrapper {
@@ -142,31 +151,30 @@ body {
     grid-template-columns: 750px auto;
 }
 
-.body-wrapper > .content-wrapper {
+.body-wrapper > .left-wrapper {
     width: 650px;
     padding: 60px 50px;
 }
 
-.body-wrapper > .content-wrapper > .text-wrapper > .content-paragraph-one {
+.body-wrapper > .left-wrapper > .text-wrapper > .content-paragraph-one h2 {
     line-height: 1.15;
     font-size: 2.5em;
     font-weight: 300;
+    margin:0px;
+    padding: 0px;
 }
 
-.body-wrapper > .content-wrapper > .text-wrapper > .content-paragraph-one > .highlighted-text {
-    font-weight: 700;
-    color: white;
-}
 
-.body-wrapper > .content-wrapper > .text-wrapper > .content-paragraph-two {
+.body-wrapper > .left-wrapper > .text-wrapper > .content-paragraph-two p {
     line-height: 1.25;
     font-size: 2em;
     font-weight: 300;
     padding: 20px 0px;
     color: #999999;
+    padding: 3px;
 }
 
-.body-wrapper > .content-wrapper > .buttons-wrapper {
+.body-wrapper > .left-wrapper > .buttons-wrapper {
     display: grid;
     grid-template-columns: auto auto;
     justify-content: left;
@@ -174,70 +182,69 @@ body {
     column-gap: 20px;
 }
 
-.body-wrapper > .content-wrapper > .buttons-wrapper > .button-wrapper {
+.body-wrapper > .left-wrapper > .buttons-wrapper > .button-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.body-wrapper > .content-wrapper > .buttons-wrapper > .button-wrapper > .sign-up-free {
+.body-wrapper > .left-wrapper > .buttons-wrapper > .button-wrapper > .sign-up-free {
     color: #000000;
     background-color: rgb(1, 212, 115);
     border: none;
     border-radius: 3px;
     width: 225px;
-    height: 60px;
-    font-size: 1.5em;
+    height: 70px;
+    font-size: 1.70em;
+    font-weight: bold;
+
 }
 
-.body-wrapper > .content-wrapper > .buttons-wrapper > .button-wrapper > .learn-more {
+.body-wrapper > .left-wrapper > .buttons-wrapper > .button-wrapper > .learn-more:hover ,
+.body-wrapper > .left-wrapper > .buttons-wrapper > .button-wrapper > .sign-up-free:hover {
+    box-shadow: 0px 1px 24px 2px #F6F4E6;
+}
+
+
+.body-wrapper > .left-wrapper > .buttons-wrapper > .button-wrapper > .learn-more {
     color: #ffffff;
     background-color: #000000;
     border: none;
     border-radius: 3px;
     width: 175px;
-    height: 60px;
-    font-size: 1.5em;
+    height: 70px;
+    font-size: 1.70em;
+    font-weight: bold;
 }
 
-.body-wrapper > .content-wrapper > .buttons-wrapper > .button-wrapper > .sign-up-free:focus,
-.body-wrapper > .content-wrapper > .buttons-wrapper > .button-wrapper > .learn-more:focus {
-    outline: none;
-}
 
-.body-wrapper > .project-wrapper {
+
+.body-wrapper > .right-wrapper {
     padding-top: 55px;
     height: 409px;
     margin-left: auto;
 }
 
-.body-wrapper > .project-wrapper > .label-wrapper {
+.body-wrapper > .right-wrapper  > .label-wrapper {
     padding-left: 10px;
 }
 
-/* .body-wrapper > .project-wrapper > .label-wrapper > .label {
-    color: #ffffff;
-}
 
-.body-wrapper > .project-wrapper > .label-wrapper > .label > .blue-link {
-    text-decoration: none;
-    color: rgb(0, 230, 245);
-} */
 
-.body-wrapper > .project-wrapper > .project-image-wrapper {
+.body-wrapper > .right-wrapper  > .project-image-wrapper {
     width: 100%;
     height: 100%;
     padding-top: 8px;
-    /* contain: strict; */
+
 }
 
-.body-wrapper > .project-wrapper > .project-image-wrapper > .project-image-container {
+.body-wrapper > .right-wrapper  > .project-image-wrapper > .project-image-container {
     margin-left: 8px;
     width: fit-content;
     padding: 0px;
     box-shadow: 1px -5px 49px 14px #000000;}
 
-.body-wrapper > .project-wrapper > .project-image-wrapper > .project-image-container > .project-image {
+.body-wrapper > .right-wrapper  > .project-image-wrapper > .project-image-container > .project-image {
     width: auto;
     height: 406px;
     max-height: 100%;
